High-contrast fix

--- a/_sass/components/_previous_next_links.scss
+++ b/_sass/components/_previous_next_links.scss
@@ -1,3 +1,13 @@
 .previous-next-links {
     margin-top: 20px;
 }
+
+body.contrast-high {
+    .previous-next-links {
+        .btn {
+            span {
+                color: $button-foregroundColor-highContrast;
+            }
+        }
+    }
+}
